# Sentiment-Analysis-with-MLOps

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  deployment.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: ci.yaml
docs/: Makefile  conf.py  index.rst  make.bat
flask_app/: app.py
notebooks/: exp1.ipynb  exp2_bow_vs_tfidf.ipynb  exp3_lor_bow_hp.ipynb
scripts/: promote_model.py
src/data/: data_ingestion.py
src/features/: feature_engineering.py
src/model/: model_building.py  model_evaluation.py  register_model.py
tests/: test_model.py
