[project]
name = "sentiment-analysis-with-mlops"
version = "0.1.0"
description = "End to end MLOps Capstone Project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiobotocore",
    "aiohappyeyeballs",
    "aiohttp",
    "aiohttp-retry",
    "aioitertools",
    "aiosignal",
    "alembic",
    "amqp",
    "aniso8601",
    "annotated-types",
    "antlr4-python3-runtime",
    "anyio",
    "appdirs",
    "asyncssh",
    "atpublic",
    "attrs",
    "awscli",
    "backoff",
    "billiard",
    "blinker",
    "boto3",
    "botocore",
    "cachetools",
    "celery",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "click-didyoumean",
    "click-plugins",
    "click-repl",
    "cloudpickle",
    "colorama",
    "commonmark",
    "configobj",
    "contourpy",
    "cookiecutter",
    "cryptography",
    "cycler",
    "dacite",
    "dagshub",
    "databricks-sdk",
    "dataclasses-json",
    "deprecated",
    "dictdiffer",
    "diskcache",
    "distro",
    "docker",
    "docutils",
    "dpath",
    "dulwich",
    "dvc",
    "dvc-data",
    "dvc-http",
    "dvc-objects",
    "dvc-render",
    "dvc-s3",
    "dvc-studio-client",
    "dvc-task",
    "entrypoints",
    "filelock",
    "flask",
    "flatten-dict",
    "flufl-lock",
    "fonttools",
    "frozenlist",
    "fsspec",
    "funcy",
    "fusepy",
    "gitdb",
    "gitpython",
    "google-auth",
    "gql",
    "grandalf",
    "graphene",
    "graphql-core",
    "graphql-relay",
    "greenlet",
    "gto",
    "h11",
    "httpcore",
    "httpx",
    "hydra-core",
    "idna",
    "importlib-metadata",
    "ipykernel",
    "iterative-telemetry",
    "itsdangerous",
    "jinja2",
    "jmespath",
    "joblib",
    "kiwisolver",
    "kombu",
    "mako",
    "markdown",
    "markupsafe",
    "marshmallow",
    "matplotlib",
    "mlflow",
    "mlflow-skinny",
    "multidict",
    "mypy-extensions",
    "networkx",
    "nltk",
    "numpy",
    "omegaconf",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "orjson",
    "packaging",
    "pandas",
    "pathspec",
    "pathvalidate",
    "pillow",
    "platformdirs",
    "prometheus-client",
    "prompt-toolkit",
    "protobuf",
    "psutil",
    "pyarrow",
    "pyasn1",
    "pyasn1-modules",
    "pycparser",
    "pydantic",
    "pydantic-core",
    "pydot",
    "pygit2",
    "pygments",
    "pygtrie",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "pyyaml",
    "querystring-parser",
    "regex",
    "requests",
    "requests-toolbelt",
    "rfc3986",
    "rich",
    "rsa",
    "ruamel-yaml",
    "ruamel-yaml-clib",
    "s3fs",
    "s3transfer",
    "scikit-learn",
    "scipy",
    "scmrepo",
    "semver",
    "shellingham",
    "shortuuid",
    "shtab",
    "six",
    "smmap",
    "sniffio",
    "sqlalchemy",
    "sqlparse",
    "sqltrie",
    "tabulate",
    "tenacity",
    "threadpoolctl",
    "tomlkit",
    "tqdm",
    "treelib",
    "typer",
    "typing-extensions",
    "typing-inspect",
    "tzdata",
    "urllib3",
    "vine",
    "voluptuous",
    "waitress",
    "wcwidth",
    "werkzeug",
    "wrapt",
    "xgboost",
    "yarl",
    "zc-lockfile",
    "zipp",
]
